# ML-engineer-Education_new

ML/Module 3.3. Машинное обучение/KNN Tasks/: README.md  pyproject.toml
ML/Module 3.3. Машинное обучение/KNN Tasks/data/: train_data.npz
ML/Module 3.3. Машинное обучение/KNN Tasks/knn_task/: knn_task.py
ML/Module 3.4 Метрики и функции потерь/: classification_demo_v1.csv  l2_metrics_v1_4.ipynb  regression_demo.csv
ML/Module 3.5 Линейные методы/: 1. Linear regression.ipynb  2. Logistic Regression.ipynb
ML/Module 3.5 Линейные методы/Linear Regression Tasks/: README.md  pyproject.toml
ML/Module 3.5 Линейные методы/Linear Regression Tasks/data/: train_data.npz
ML/Module 3.5 Линейные методы/Linear Regression Tasks/linear_reg_task/: linear_reg_task.py
ML/Module 3.5 Линейные методы/Linear Regression Tasks/result/: model_pipeline.pkl
ML/Module 3.6 Деревья решений/: 1. Decision Tree.ipynb  2. Algorithms Composition.ipynb  3. Gradient Boosting.ipynb
ML/Module 3.6 Деревья решений/Decision Tree Task/: README.md  pyproject.toml
ML/Module 3.6 Деревья решений/Decision Tree Task/data/: train_data.npz
ML/Module 3.6 Деревья решений/Decision Tree Task/decision_trees_task/: decision_trees_task.py
ML/week_02_da_libs_intro/: L1_numpy_pandas_scipy_v1_1.ipynb
Python/Module 1. Синтаксис, типы данных и строки/: Module 1 Tasks.ipynb
Python/Module 2. Коллекции, списки, кортежи, словари, срезы, генераторы. Даты и время/: Module 2.ipynb
Python/Module 3. Функции, библиотеки, pip, виртуальное окружение/: 07. Functions.ipynb  08. Libraries.ipynb  (+2 more)
SQL/: ORM и SQLAlchemy.ipynb
(+44 files in other folders)
