[tool.poetry]
name = "knn-task"
version = "0.1.0"
description = ""
authors = ["andreev.d.111 <andreev.d.111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.3"
numpy = "2.1.3"
scikit-learn = "1.6.1"
joblib = "1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
