[tool.poetry]
name = "decision-trees-task"
version = "0.1.0"
description = ""
authors = ["andreev.d.111 <andreev.d.111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
joblib = "^1.3.0"
pytest = "^7.3.0"
catboost = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
